--- a/style.css
+++ b/style.css
@@ -171,3 +171,7 @@ a:hover {
     font-family: "Roboto Mono", monospace;
     font-size: 1.5vh;
 }
+
+.error-border {
+    border-color: red !important;
+}
